5.msa/k8s/ingress_cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: js-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #첫번쨰 prefix제거
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
    - "server.alexandrelax.shop"
    secretName: server-jeaseok-com-tls
  rules:
  - host: server.alexandrelax.shop  # 설정하려는 도메인 이름. 제외시에 elb 주소로도 접근할수 있는 모든 도메인 접근 가능.
    http:
  #  - http:
      paths:
      - path: /member-service/(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: js-msa-member-service
            port:
              number: 80
      - path: /ordering-service/(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: js-msa-ordering-service
            port:
              number: 80
      - path: /product-service/(.*) #모든 url요청을 nginx-service로 라우팅
        pathType: Prefix
        backend:
          service:
            name: js-msa-product-service
            port:
              number: 80
